--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -31,15 +31,6 @@
   background-color: #6b8cc6;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
 }
@@ -50,27 +41,9 @@ h1 {
   margin: 0;
 }
 
+h3,
 h4 {
   margin: 0;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 .city-and-date {
@@ -100,6 +73,11 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 8em;
+}
+
+.main-weather-temperature {
+  width: 2.6em;
 }
 
 .vertical-spacer {
@@ -123,11 +101,7 @@ button:focus-visible {
 }
 
 .daily-weather-date {
-  min-width: 5em;
-}
-
-.daily-weather-icon {
-  margin-left: -2.5em;
+  max-width: 2em;
 }
 
 .daily-weather-night {
@@ -171,8 +145,7 @@ button:focus-visible {
 .city-search .MuiOutlinedInput-root,
 .city-search .MuiOutlinedInput-root fieldset,
 .city-search .MuiOutlinedInput-root:hover fieldset,
-.city-search .MuiOutlinedInput-root.Mui-focused fieldset
-{
+.city-search .MuiOutlinedInput-root.Mui-focused fieldset {
   width: 20em;
   border-radius: 10px 0 0 10px;
   height: 2.9em;
@@ -207,4 +180,39 @@ button:focus-visible {
 .city-search-night .MuiButton-root {
   color: #fefefe !important;
   background-color: #a3b4d1 !important;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.circular-progress .MuiCircularProgress-svg {
+  color: #020202 !important;
+}
+
+.circular-progress-night .MuiCircularProgress-svg {
+  color: #fefefe !important;
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  padding: 0 3em;
+}
+
+.error h3 {
+  margin-top: 0.6em;
+  margin-bottom: 0.8em;
+}
+
+.error-night {
+  color: #fefefe;
 }
